csp1 overflow fixed

--- a/csp1/css/style1.css
+++ b/csp1/css/style1.css
@@ -1,7 +1,8 @@
 * {
 	box-sizing: border-box;
 	margin: 0 auto;
-
+	padding: 0;
+	/*overflow: hidden;*/
 }
 
 body {
@@ -28,12 +29,16 @@ body {
 	margin-bottom: 67px;
 	border-top: 3px solid #C7D0D4; /* silver of silver */
 	border-bottom: 3px solid #C7D0D4; /* silver of silver */
+	margin-top: -20px;
+	padding: 0;
+
 }
 
 .navbar {
 	background-color: transparent;
 	border: none;
 	/*height: 67px;*/
+	border-radius: 0;
 }	
 
 .logo {
@@ -42,15 +47,18 @@ body {
 	width: 110%;
 	margin: 0;
 	margin-right: 20px;
-	padding-top: 8px;
+	padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 25px;
 }
 
 #img-logo {
-	
 	margin-right: 10px;
 	width: 35px;
 	height: 35px;	
 }
+
+
 
 #best {
 	font-family: 'Cedarville Cursive', cursive;
@@ -59,7 +67,7 @@ body {
 
 #memories {
 	font-family: 'Merienda One', cursive;
-	font-size: 4em;
+	font-size: 3em;
 }
 
 
@@ -72,7 +80,8 @@ body {
 .features,
 .feature1,
 .feature2,
-.book {
+.book
+.logo {
 	border: 2px solid red;
 }*/
 
@@ -95,7 +104,8 @@ body {
 
 #btn-login,
 #btn-signup {
-	width: 75px;
+	width: 250px;
+	font-size: 20px;
 }
 
 
@@ -105,8 +115,8 @@ body {
 	color: white;
 }
 
-.form-control {
-	border-radius: 8px;
+label {
+    font-size: 20px;
 }
 
 .separator-container {
@@ -122,6 +132,7 @@ body {
 	color: white;
 	padding: 10px;
 	margin: 0;
+	font-size: 17px;
 }
 
 
@@ -142,7 +153,8 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	height: 631px;
+	/*height: 631px;*/
+	height: 100%;
 }
 
 .carousel-control-left,
@@ -183,15 +195,20 @@ body {
 
 }
 
-.book {
+.book,
+.feature1,
+.feature2 {
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
 
-h4 {
+h4,
+.feature1 >h4 {
 	font-family: 'Gloria Hallelujah', cursive;
 	color: white;
 }
+
+
 
 .about {
 	min-height: 600px;
@@ -233,7 +250,7 @@ h4 {
 	margin: 0 auto;
 	padding-top: 30px;
 	padding-bottom: 45px;
-	background-color: #E1FAFC;	/*diamond girl*/
+	background-color: rgba(225, 250, 252, 0.5);	/*diamond girl E1FAFC*/
 	height: auto;
 
 }
@@ -241,7 +258,7 @@ h4 {
 .contact-info {
 	text-align: center;
 	height: auto;
-	background-color: #C7D0D4; /* silver of silver */
+	background-color: rgba(199, 208, 212, 0.5); /* silver of silver C7D0D4 */
 	padding-bottom: 87px;
 }
 
@@ -253,10 +270,14 @@ h4 {
 /*.form-group input,*/
 .form-control {
 	text-align: left;
-	font-size: 12px;
+	font-size: 18px;
 	overflow: auto;
-	width: 220px;
+	width: 250px;
+	border-radius: 4px;
+	padding: 20px 12px;
 }
+
+
 
 #btn-send {
 	text-align: center;
